refactor(payment): clean up comments and improve code readability in payment-related classes